Fix diy on mobile + use flex grid classes

--- a/app/assets/stylesheets/_honeycrisp-compact.scss
+++ b/app/assets/stylesheets/_honeycrisp-compact.scss
@@ -294,6 +294,9 @@
   }
 }
 
+.padding-20 {
+  padding: 2rem;
+}
 // Plain help text without extra line height or margin.
 .help-text {
   color: $color-grey-medium;
@@ -301,6 +304,11 @@
 
 .grid-flex {
   display: flex;
+
+  &.contained {
+    max-width: 960px;
+    margin: 0 auto;
+  }
 
   &.space-between {
     justify-content: space-between;
@@ -310,12 +318,18 @@
     align-items: center;
   }
 
+  &.center-justified {
+    justify-content: center;
+  }
+
   .no-shrink {
     flex-shrink: 0;
   }
+
   .item {
     margin-right: 6rem;
   }
+
   .item:last-of-type {
     margin-right: 0;
   }
@@ -330,6 +344,13 @@
 
   &.column-column {
     flex-direction: column;
+  }
+
+  &.column-row {
+    flex-direction: column;
+    @media screen and (min-width: $site-max-up) {
+      flex-direction: row;
+    }
   }
 }
 
